--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                       <a href="https://m.expert.naver.com/expert/profile/home?storeId=100027458"><img src="assets/3.png" alt="itcider" data-slide-to="0" data-bs-slide-to="0"></a>
+                       <a href="https://m.expert.naver.com/expert/profile/home?storeId=100027458"><img src="assets/3.png" alt="itcider" data-slide-to="0" data-bs-slide-to="0" loading="lazy"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -107,7 +107,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://pf.kakao.com/_CSdxis/chat" ><img src="assets/1-1.png" alt="itcider" data-slide-to="1" data-bs-slide-to="1"></a>
+                        <a href="https://pf.kakao.com/_CSdxis/chat" ><img src="assets/1-1.png" alt="itcider" data-slide-to="1" data-bs-slide-to="1" loading="lazy"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>카카오톡 플러스친구</strong></h5>
@@ -120,7 +120,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://kin.naver.com/profile/index.naver?u=rGmmL9sUo2EOm%2FiearXtHdr5d%2FrCZ43S4t0damZP%2FkA%3D"> <img src="assets/4.png" alt="itcider" title="" data-slide-to="2" data-bs-slide-to="2"></a>
+                        <a href="https://kin.naver.com/profile/index.naver?u=rGmmL9sUo2EOm%2FiearXtHdr5d%2FrCZ43S4t0damZP%2FkA%3D"> <img src="assets/4.png" alt="itcider" title="" data-slide-to="2" data-bs-slide-to="2" loading="lazy"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -133,7 +133,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://m.me/itcider"> <img src="assets/2.png" alt="itcider" data-slide-to="3" data-bs-slide-to="3"></a>
+                        <a href="https://m.me/itcider"> <img src="assets/2.png" alt="itcider" data-slide-to="3" data-bs-slide-to="3" loading="lazy"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -148,7 +148,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://www.pinterest.co.kr/itcidercom/"> <img src="assets/6.png" alt="itcider" title="" data-slide-to="4" data-bs-slide-to="4"></a>
+                        <a href="https://www.pinterest.co.kr/itcidercom/"> <img src="assets/6.png" alt="itcider" title="" data-slide-to="4" data-bs-slide-to="4" loading="lazy"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><p>
@@ -161,7 +161,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://twitter.com/itcider" >  <img src="assets/5.png" alt="itcider" title="" data-slide-to="5" data-bs-slide-to="5"></a>
+                        <a href="https://twitter.com/itcider" >  <img src="assets/5.png" alt="itcider" title="" data-slide-to="5" data-bs-slide-to="5" loading="lazy"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -277,7 +277,7 @@
             <div class="col-md-2 col-6">
                 <div class="media-wrap">
                     <a href="https://portal.itcider.com">
-                        <img src="assets/itclog.png" alt="itcider">
+                        <img src="assets/itclog.png" alt="itcider" loading="lazy">
                     </a>
                 </div>
             </div>
