--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <div class="media-container-row">
                 <div class="col-md-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2022 itcider - All Rights Reserved
+                        © Copyright 2021-2023 itcider - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
