--- a/index.html
+++ b/index.html
@@ -319,6 +319,8 @@
 <script src="assets/formoid.min.js"></script>
   
   
+    <div id="scrollToTop" class="scrollToTop itc-arrow-up"><a style="text-align: center;"><i
+                class="itc-arrow-up-icon itc-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   <input name="animation" type="hidden">
   </body>
 </html>
