--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                       <a href="https://m.expert.naver.com/expert/profile/home?storeId=100027458"><img src="assets/3.png" alt="itcider" data-slide-to="0" data-bs-slide-to="0" loading="lazy"></a>
+                       <a href="https://m.expert.naver.com/mobile/expert/product/detail?storeId=100027458&productId=100085855"><img src="assets/3.png" alt="itcider" data-slide-to="0" data-bs-slide-to="0" loading="lazy"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
